# semantic_network

./: .gitignore  app.py  app_csv.py  app_family.py  entrada.txt  family.pl  generator.py  instrucciones.txt  main.py  pyproject.toml  semantic.py  ui.py
data/: entrada.txt  family.txt  info.txt  objects.csv  semantic.csv
router/: api.py
templates/: base.html  family_tree.html  index.html  menu.html  semantic_network.html  semantic_network_info.html
templates/components/: menu.html  semantic_network_info.html
templates/fragments/: family_tree.html  semantic_network.html
templates/layout/: base.html
templates/prolog/: family.pl
templates/views/: family_tree.html  index.html  semantic_network.html
transpiler/: mermaid.py  prolog.py
util/: file.py  mermaid.py  text.py  type.py
