[tool.poetry]
name = "semantic-network"
version = "0.1.0"
description = ""
authors = ["Gamaliel Garcia <46827955+EGAMAGZ@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-mermaid = "^0.1.3"
webui2 = "^2.4.5"
jinja2 = "^3.1.3"
matplotlib = "^3.8.3"
networkx = "^3.2.1"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
